--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 # add the following to _config.yml file
 title: YOUR NAME
-theme: jeykll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
