--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,10 @@ title: Lucas Ben
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+navigation:
+- title: Home
+  url: /
+- title: My Projects
+  url: /projects/
+- title: School
+  url: /school/
