--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # add the following to _config.yml file
-title: Lucas Ben
+title: Hi I'm Lucas
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
